chore: add server to lerna.json

--- a/.github/scripts/lernaDeps.json
+++ b/.github/scripts/lernaDeps.json
@@ -20,6 +20,7 @@
         "packages/manifest",
         "packages/api",
         "packages/fx-core",
+        "packages/server",
         "templates"
     ],
     "sdk": [
