chore(vsc): rename 'quick start' to 'get started'

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -487,7 +487,7 @@
       },
       {
         "command": "fx-extension.openWelcome",
-        "title": "%teamstoolkit.commands.quickStart.title%"
+        "title": "%teamstoolkit.commands.getstarted.title%"
       },
       {
         "command": "fx-extension.openSurvey",
@@ -1004,7 +1004,7 @@
     ],
     "walkthroughs": [
       {
-        "id": "teamsToolkitQuickStart",
+        "id": "teamsToolkitGetStarted",
         "title": "Get started with Teams Toolkit",
         "description": "Jumpstart your Teams app development experience",
         "steps": [
