--- a/packages/function-extension/tests/TestAssets/FunctionAppJS/testFunctionAppJSTemplate/.gitignore
+++ b/packages/function-extension/tests/TestAssets/FunctionAppJS/testFunctionAppJSTemplate/.gitignore
@@ -91,7 +91,9 @@ out
 bin
 obj
 appsettings.json
-local.settings.json
+
+# ignore local.settings.json if it contains your own credentials
+# local.settings.json
 
 # tests artifacts
 localNuget/
