--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/cert.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/cert.template
@@ -5,12 +5,13 @@ import {
   createPemCertOption,
 } from "@microsoft/teamsfx";
 
-// Loads current app's configuration.
+// Load application configuration
 const teamsFx = new TeamsFx();
-// Initializes a new axios instance to call {{config.APIName}} API.
+// Initialize a new axios instance to call {{config.APIName}}
 const authProvider = new CertificateAuthProvider(
-  // Please add code to read your cert and private key, replace "<your-cert>" and "<your-private-key>" with actual value.
-  // If you have a .pfx cert, you can use "createPfxCertOption" function to initialize your cert option.
+  // Add code to read your certificat and private key.
+  // Replace "<your-cert>" and "<your-private-key>" with your actualy cert and private key values
+  // If you have a .pfx certificate, you can use the `createPfxCertOption` function to initialize your certificate
   createPemCertOption("<your-cert>", "<your-private-key>")
 );
 const {{config.APIName}}Client = createApiClient(teamsFx.getConfig("TEAMSFX_API_{{capitalName}}_ENDPOINT"), authProvider);
