--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/cert.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/cert.template
@@ -4,7 +4,7 @@ const teamsfxSdk = require("@microsoft/teamsfx");
 const teamsFx = new teamsfxSdk.TeamsFx();
 // Initialize a new axios instance to call {{config.APIName}}
 const authProvider = new teamsfxSdk.CertificateAuthProvider(
-  // Add code to read your certificat and private key.
+  // Add code to read your certificate and private key.
   // Replace "<your-cert>" and "<your-private-key>" with your actualy cert and private key values
   // If you have a .pfx certificate, you can use the `createPfxCertOption` function to initialize your certificate
   teamsfxSdk.createPemCertOption("<your-cert>", "<your-private-key>")
