--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/cert.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/js/cert.template
@@ -4,7 +4,7 @@ const teamsfxSdk = require("@microsoft/teamsfx");
 const teamsFx = new teamsfxSdk.TeamsFx();
 // Initializes a new axios instance to call {{config.APIName}} API.
 const authProvider = new teamsfxSdk.CertificateAuthProvider(
-  // TODO: Please add code to read your cert and private key, replace "<your-cert>" and "<your-private-key>" with actual value.
+  // TODO: Add code to read your certificate and private key. Replace "<your-cert>" and "<your-private-key>" with your actual certificate and private key values.
   // If you have a .pfx cert, you can use "createPfxCertOption" function to initialize your cert option.
   teamsfxSdk.createPemCertOption("<your-cert>", "<your-private-key>")
 );
