--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/ts/aad.template
@@ -21,7 +21,7 @@ const teamsFx = new TeamsFx(IdentityType.App, {
 // Initializes a new axios instance to call {{config.APIName}} API.
 const appCredential = teamsFx.getCredential();
 const authProvider = new BearerTokenAuthProvider(
-  // TODO: Please replace '<your-api-scope>' with actual api scope value.
+  // TODO: Please replace '<your-api-scope>' with your API scope value.
   async () => (await appCredential.getToken("<your-api-scope>"))!.token
 );
 const {{config.APIName}}Client = createApiClient(
