--- a/.github/workflows/simpleauthCI.yml
+++ b/.github/workflows/simpleauthCI.yml
@@ -38,4 +38,4 @@ jobs:
         TEAMS_SIMPLE_AUTH_IntegrationTestSettings__TestUserName2: ${{secrets.SIMPLE_AUTH_TEST_USER_NAME_2}}
         TEAMS_SIMPLE_AUTH_IntegrationTestSettings__TestPassword2: ${{secrets.SIMPLE_AUTH_TEST_PASSWORD_2}}
       run:
-        chmod +x "scripts/test.sh" && "sudo scripts/test.sh"
+        chmod +x "scripts/test.sh" && "sudo bash scripts/test.sh"
