--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.14.0",
+  "version": "1.0.0-rc",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
