--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -10,7 +10,7 @@
         "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "^1.9.0",
         "@microsoft/teamsfx": "1.0.0-rc.0",
-        "@microsoft/teamsfx-react": "1.0.0",
+        "@microsoft/teamsfx-react": "1.0.0-rc.0",
         "axios": "^0.21.1",
         "msteams-react-base-component": "^3.1.0",
         "react": "^16.14.0",
