chore: add codeql rules

--- a/.github/codeql/javascript-config.yml
+++ b/.github/codeql/javascript-config.yml
@@ -1,11 +1,12 @@
 name: "TeamsFx javascript CodeQL config"
 
-packs:
-  - codeql/javascript-queries
-
 queries:
   - name: Extended Security
     uses: security-extended
 
   - name: Security and Quality
     uses: security-and-quality
+
+paths-ignore:
+  - "**/*.test.ts"
+  - "**/*.tests.ts"
