--- a/.github/codeql/javascript-config.yml
+++ b/.github/codeql/javascript-config.yml
@@ -3,13 +3,6 @@ name: "TeamsFx javascript CodeQL config"
 packs:
   - codeql/javascript-queries
 
-queries:
-  - name: Extended Security
-    uses: security-extended
-
-  - name: Security and Quality
-    uses: security-and-quality
-
 paths-ignore:
-  - "**/*.test.ts"
-  - "**/*.tests.ts"
+  - "**/test/**"
+  - "**/tests/**"
