chore: fix after some comments

--- a/templates/package.json
+++ b/templates/package.json
@@ -23,6 +23,7 @@
         "bot/ts/notification-restify",
         "bot/ts/notification-trigger-http",
         "bot/ts/notification-trigger-timer",
+        "bot/csharp/default",
         "function-base/js/default",
         "function-base/ts/default",
         "function-triggers/js/HTTPTrigger",
@@ -33,8 +34,7 @@
         "tab/js/non-sso",
         "tab/ts/non-sso",
         "tab/js/m365",
-        "tab/ts/m365",
-        "msgext/csharp/default"
+        "tab/ts/m365"
     ],
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^4.19.0",
