--- a/.github/codeql/javascript-config.yml
+++ b/.github/codeql/javascript-config.yml
@@ -3,6 +3,16 @@ name: "TeamsFx javascript CodeQL config"
 packs:
   - codeql/javascript-queries
 
+queries:
+  - name: Extended Security
+    uses: security-extended
+
+  - name: Security and Quality
+    uses: security-and-quality
+
 paths-ignore:
-  - "**/test/**"
-  - "**/tests/**"
+  - "**/test/**/*"
+  - "**/tests/**/*"
+  - "**/*.test.ts"
+  - "**/*.tests.ts"
+  - ".github/scripts"
