--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx",
-  "version": "0.7.0-beta.1",
+  "version": "2.0.0-beta.0",
   "description": "Microsoft Teams Framework for Node.js and browser.",
   "main": "dist/index.node.cjs.js",
   "browser": "dist/index.esm2017.js",
@@ -61,7 +61,7 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@microsoft/teams-js": "^2.0.0-beta.6"
+    "@microsoft/teams-js": "^2.0.0"
   },
   "devDependencies": {
     "@azure/arm-sql": "^8.0.0",
@@ -71,7 +71,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.14.1",
     "@microsoft/api-extractor": "^7.19.4",
-    "@microsoft/teams-js": "^2.0.0-beta.6",
+    "@microsoft/teams-js": "^2.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
