fix(m365): add registerChangeSettingsHandler mapping

--- a/packages/vscode-extension/src/migration/migrationTool/ts/mappings.json
+++ b/packages/vscode-extension/src/migration/migrationTool/ts/mappings.json
@@ -114,6 +114,10 @@
       "target": "microsoftTeams.pages.config.registerChangeConfigHandler"
     },
     {
+      "source": "microsoftTeams.registerChangeSettingsHandler",
+      "target": "microsoftTeams.pages.config.registerChangeConfigHandler"
+    },
+    {
       "source": "microsoftTeams.enterFullscreen",
       "target": "microsoftTeams.pages.fullTrust.enterFullscreen"
     },
