--- a/templates/tab/ts/m365/package.json
+++ b/templates/tab/ts/m365/package.json
@@ -8,8 +8,8 @@
         "@microsoft/mgt-react": "2.4.1-next.teamsfx.1552a26",
         "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.1552a26",
         "@microsoft/microsoft-graph-client": "^3.0.1",
-        "@microsoft/teams-js": "2.0.0-beta.6",
-        "@microsoft/teamsfx": "0.7.0-beta.0",
+        "@microsoft/teams-js": "^2.0.0",
+        "@microsoft/teamsfx": "^2.0.0-beta.0",
         "axios": "^0.21.1",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
