--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "1.0.0-rc.5",
+  "version": "1.0.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -112,8 +112,8 @@
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.1.1",
-    "@microsoft/teamsfx-api": "^0.19.0-rc.0",
-    "@microsoft/teamsfx-core": "^1.9.0-rc.5",
+    "@microsoft/teamsfx-api": "^0.19.0",
+    "@microsoft/teamsfx-core": "^1.9.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async": "^2.6.4",
