--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-server",
-  "version": "0.1.1-rc.5",
+  "version": "0.1.1",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -90,8 +90,8 @@
   },
   "dependencies": {
     "@azure/ms-rest-nodeauth": "^3.1.1",
-    "@microsoft/teamsfx-api": "^0.19.0-rc.0",
-    "@microsoft/teamsfx-core": "^1.9.0-rc.5",
+    "@microsoft/teamsfx-api": "^0.19.0",
+    "@microsoft/teamsfx-core": "^1.9.0",
     "fs-extra": "^9.1.0",
     "underscore": "^1.12.1",
     "vscode-jsonrpc": "^6.0.0",
