--- a/.azure-pipelines/apiscan.yml
+++ b/.azure-pipelines/apiscan.yml
@@ -15,6 +15,7 @@ steps:
   inputs:
     projects: |
      packages/function-extension
+     packages/dotnet-sdk
     arguments: '/p:Configuration=Release'
 
 # Remove files that won't be released
@@ -23,6 +24,17 @@ steps:
   inputs:
     softwareFolder: 'packages/function-extension/src/bin/Release/netcoreapp3.1'
     softwareName: TeamsFxFunctionExtension
+    softwareVersionNum: '$(Build.BuildId)'
+    isLargeApp: false
+    verbosityLevel: 'none'
+  env:
+    AzureServicesAuthConnectionString: '$(AzureServicesAuthConnectionString)'
+
+- task: APIScan@2
+  displayName: 'Run APIScan on Microsoft.TeamsFx'
+  inputs:
+    softwareFolder: packages/dotnet-sdk/src/TeamsFx/bin/Release/net6.0
+    softwareName: TeamsFx
     softwareVersionNum: '$(Build.BuildId)'
     isLargeApp: false
     verbosityLevel: 'none'
