--- a/.azure-pipelines/apiscan.yml
+++ b/.azure-pipelines/apiscan.yml
@@ -10,6 +10,11 @@ pool:
   vmImage: windows-2019
 
 steps:
+- task: UseDotNet@2
+  displayName: 'Use .NET 6.0'
+  inputs:
+    version: 6.0.x
+
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build'
   inputs:
