--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -40,33 +40,19 @@
     "out/**/*"
   ],
   "activationEvents": [
-    "*",
-    "onCommand:fx-extension.openWelcome",
-    "onCommand:fx-extension.openSamples",
-    "onCommand:fx-extension.openDocument",
-    "onCommand:fx-extension.cmpAccounts",
     "onCommand:fx-extension.create",
-    "onCommand:fx-extension.openManifest",
-    "onCommand:fx-extension.validateManifest",
-    "onCommand:fx-extension.build",
-    "onCommand:fx-extension.provision",
-    "onCommand:fx-extension.deploy",
-    "onCommand:fx-extension.publish",
-    "onCommand:fx-extension.updateAad",
-    "onCommand:fx-extension.openAppManagement",
-    "onCommand:fx-extension.openBotManagement",
-    "onCommand:fx-extension.openReportIssues",
     "onCommand:fx-extension.getNewProjectPath",
-    "onCommand:fx-extension.openReadMe",
     "onCommand:fx-extension.openDeploymentTreeview",
+    "onCommand:fx-extension.openDocument",
+    "onCommand:fx-extension.openReadMe",
+    "onCommand:fx-extension.openSamples",
+    "onCommand:fx-extension.openWelcome",
+    "onCommand:fx-extension.selectAndDebug",
     "onCommand:fx-extension.selectTutorials",
+    "onCommand:fx-extension.validate-getStarted-prerequisites",
     "onCommand:workbench.action.tasks.runTask",
     "workspaceContains:**/.fx/*",
-    "onView:teamsfx-accounts",
-    "onView:teamsfx-environment",
-    "onView:teamsfx-development",
-    "onView:teamsfx-deployment",
-    "onView:teamsfx-help-and-feedback"
+    "onView:teamsfx-empty-project"
   ],
   "contributes": {
     "icons": {
@@ -104,11 +90,13 @@
     "viewsWelcome": [
       {
         "view": "teamsfx-empty-project",
-        "contents": "To start Teams app development experience, create a project or explore our samples. For more information, visit [Get Started](command:fx-extension.openWelcome?%5B%22SideBar%22%5D), [Tutorials](command:fx-extension.selectTutorials?%5B%22SideBar%22%5D) or [Documentation](command:fx-extension.openDocument?%5B%22SideBar%22%5D).\n[Create a new Teams app](command:fx-extension.create?%5B%22SideBar%22%5D)\n[View samples](command:fx-extension.openSamples?%5B%22SideBar%22%5D)\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)"
+        "contents": "To start Teams app development experience, create a project or explore our samples. For more information, visit [Get Started](command:fx-extension.openWelcome?%5B%22SideBar%22%5D), [Tutorials](command:fx-extension.selectTutorials?%5B%22SideBar%22%5D) or [Documentation](command:fx-extension.openDocument?%5B%22SideBar%22%5D).\n[Create a new Teams app](command:fx-extension.create?%5B%22SideBar%22%5D)\n[View samples](command:fx-extension.openSamples?%5B%22SideBar%22%5D)\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)",
+        "enablement": "fx-extension.initialized"
       },
       {
         "view": "teamsfx-empty-project-and-check-upgrade",
-        "contents": "To start Teams app development experience, create a project or explore our samples. For more information, visit [Get Started](command:fx-extension.openWelcome?%5B%22SideBar%22%5D), [Tutorials](command:fx-extension.selectTutorials?%5B%22SideBar%22%5D) or [Documentation](command:fx-extension.openDocument?%5B%22SideBar%22%5D).\n[Create a new Teams app](command:fx-extension.create?%5B%22SideBar%22%5D)\n[View samples](command:fx-extension.openSamples?%5B%22SideBar%22%5D)\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)\nYou need to upgrade the project to the new configuration files to use the latest features. The upgrade process will not change your custom code and create the backup files in case revert is needed.\nNotice this upgrade is a must-have to continue to use current version Teams Toolkit. If you are not ready to upgrade and want to continue to use the old version Teams Toolkit, please find Teams Toolkit in Extension and install the version <=2.10.0.\n[Upgrade project](command:fx-extension.checkProjectUpgrade)"
+        "contents": "To start Teams app development experience, create a project or explore our samples. For more information, visit [Get Started](command:fx-extension.openWelcome?%5B%22SideBar%22%5D), [Tutorials](command:fx-extension.selectTutorials?%5B%22SideBar%22%5D) or [Documentation](command:fx-extension.openDocument?%5B%22SideBar%22%5D).\n[Create a new Teams app](command:fx-extension.create?%5B%22SideBar%22%5D)\n[View samples](command:fx-extension.openSamples?%5B%22SideBar%22%5D)\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)\nYou need to upgrade the project to the new configuration files to use the latest features. The upgrade process will not change your custom code and create the backup files in case revert is needed.\nNotice this upgrade is a must-have to continue to use current version Teams Toolkit. If you are not ready to upgrade and want to continue to use the old version Teams Toolkit, please find Teams Toolkit in Extension and install the version <=2.10.0.\n[Upgrade project](command:fx-extension.checkProjectUpgrade)",
+        "enablement": "fx-extension.initialized"
       }
     ],
     "views": {
@@ -116,50 +104,50 @@
         {
           "id": "teamsfx-accounts",
           "name": "Accounts",
-          "when": "fx-extension.sidebarWelcome.treeview"
+          "when": "fx-extension.isTeamsFx"
         },
         {
           "id": "teamsfx-environment",
           "name": "Environment",
-          "when": "fx-extension.sidebarWelcome.treeview"
+          "when": "fx-extension.isTeamsFx"
         },
         {
           "id": "teamsfx-development",
           "name": "Development",
-          "when": "fx-extension.sidebarWelcome.treeview && !fx-extension.customizedTreeview"
+          "when": "fx-extension.isTeamsFx"
         },
         {
           "type": "webview",
           "id": "teamsfx-development-webview",
           "name": "Development",
-          "when": "fx-extension.sidebarWelcome.treeview && fx-extension.customizedTreeview"
+          "when": "fx-extension.isTeamsFx && fx-extension.customizedTreeview"
         },
         {
           "id": "teamsfx-deployment",
           "name": "Deployment",
-          "when": "fx-extension.sidebarWelcome.treeview && !fx-extension.customizedTreeview"
+          "when": "fx-extension.isTeamsFx"
         },
         {
           "type": "webview",
           "id": "teamsfx-deployment-webview",
           "name": "Deployment",
-          "when": "fx-extension.sidebarWelcome.treeview && fx-extension.customizedTreeview"
+          "when": "fx-extension.isTeamsFx && fx-extension.customizedTreeview"
         },
         {
           "id": "teamsfx-help-and-feedback",
           "name": "Help and feedback",
-          "when": "fx-extension.sidebarWelcome.treeview",
+          "when": "fx-extension.isTeamsFx",
           "visibility": "collapsed"
         },
         {
           "id": "teamsfx-empty-project",
           "name": "Teams Toolkit",
-          "when": "fx-extension.sidebarWelcome.default && !fx-extension.canUpgradeToArmAndMultiEnv"
+          "when": "!fx-extension.isTeamsFx && !fx-extension.canUpgradeToArmAndMultiEnv"
         },
         {
           "id": "teamsfx-empty-project-and-check-upgrade",
           "name": "Teams Toolkit",
-          "when": "fx-extension.sidebarWelcome.default && fx-extension.canUpgradeToArmAndMultiEnv"
+          "when": "!fx-extension.isTeamsFx && fx-extension.canUpgradeToArmAndMultiEnv"
         }
       ]
     },
