--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -171,6 +171,7 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
+        run: dotnet --info
 
       - name: Download Simple Auth bits
         uses: nick-fields/retry@v2
