test: setup .net in e2e workflow

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -171,6 +171,8 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
+
+      - name: show .net info
         run: dotnet --info
 
       - name: Download Simple Auth bits
